namespace CustomLib.Models.Issues
{
    public class IssuePut
    {
        public string Label { get; set; } = "";
    }
}
